objects/ssot__DiagnosticSummary__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AttachmentLanguage__c</fullName>
        <label>Attachment Language</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AuthenticatorId__c</fullName>
        <label>Authenticator</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AuthenticatorObject__c</fullName>
        <label>Authenticator Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BasedOnReferenceId__c</fullName>
        <label>Based On Reference</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BasedOnReferenceObject__c</fullName>
        <label>Based On Reference Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CareObservationId__c</fullName>
        <label>Care Observation</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CaseId__c</fullName>
        <label>Case</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClinicalEncounterId__c</fullName>
        <label>Clinical Encounter</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CustodianOrganizationId__c</fullName>
        <label>Custodian Organization</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DiagnosticDocumentFormatCodeId__c</fullName>
        <label>Diagnostic Document Format Code</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DiagnosticDocumentSecurityCodeId__c</fullName>
        <label>Diagnostic Document Security Code</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DiagnosticDocumentTypeCodeId__c</fullName>
        <label>Diagnostic Document Type Code</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DiagnosticSummaryCategory__c</fullName>
        <label>Diagnostic Summary Category</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DiagnosticSummaryCodeId__c</fullName>
        <label>Diagnostic Summary Code</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DiagnosticSummaryDocumentStage__c</fullName>
        <label>Diagnostic Summary Document Stage</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DiagnosticSummaryStatus__c</fullName>
        <label>Diagnostic Summary Status</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DiagnosticSummaryText__c</fullName>
        <label>Diagnostic Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DiagnosticSummaryTypeCodeId__c</fullName>
        <label>Diagnostic Summary Type Code</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DiagnosticSummaryUsageTypeCode__c</fullName>
        <label>Diagnostic Summary Usage Type Code</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DiagnosticSummary_CaseId_map_Case_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DiagnosticSummary_CaseId_map_Case_Id_N_1</label>
        <referenceTo>ssot__Case__dlm</referenceTo>
        <relationshipLabel>DiagnosticSummary_CaseId_map_Case_Id_N_1</relationshipLabel>
        <relationshipName>DiagnosticSummary_CaseId_map_Case_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveEndDateTime__c</fullName>
        <label>Effective End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveStartDateTime__c</fullName>
        <label>Effective Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Diagnostic Summary Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Image1Url__c</fullName>
        <label>Image1 Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Image2Url__c</fullName>
        <label>Image2 Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Image3Url__c</fullName>
        <label>Image3 Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ImageComment1Name__c</fullName>
        <label>Image Comment1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ImageComment2Name__c</fullName>
        <label>Image Comment2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ImageComment3Name__c</fullName>
        <label>Image Comment3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ImageComments1Name__c</fullName>
        <label>Image Comments1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ImageComments2Name__c</fullName>
        <label>Image Comments2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ImageComments3Name__c</fullName>
        <label>Image Comments3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InterpretedByHealthcarePerformerId__c</fullName>
        <label>Interpreted By Healthcare Performer</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IssuedByHealthcarePerformerId__c</fullName>
        <label>Issued By Healthcare Performer</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IssuedDateTime__c</fullName>
        <label>Issued Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PatientId__c</fullName>
        <label>Patient</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReportAttachmentId__c</fullName>
        <label>Report Attachment</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__UsageType__c</fullName>
        <label>Usage Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716725807037_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DiagnosticSummary_AuthenticatorId_ma_rel</label>
        <referenceTo>ssot__HealthcareProvider__dlm</referenceTo>
        <relationshipLabel>DiagnosticSummary_AuthenticatorId_ma_rel</relationshipLabel>
        <relationshipName>rel_1716725807037_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716725809271_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DiagnosticSummary_CareObservationId__rel</label>
        <referenceTo>ssot__CareObservation__dlm</referenceTo>
        <relationshipLabel>DiagnosticSummary_CareObservationId__rel</relationshipLabel>
        <relationshipName>rel_1716725809271_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716725811347_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DiagnosticSummary_AuthenticatorId_ma_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>DiagnosticSummary_AuthenticatorId_ma_rel</relationshipLabel>
        <relationshipName>rel_1716725811347_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>